--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,16 @@
 img.lazy {
+}
+.au-inner-col {
+	position: relative;
+}
+.au-lazy {
+	position: absolute;
+	left: 0;
+	top: 40px;
+	z-index: -1;
+	height: 200px;
+	width: 100%;
+	display: block;
     background-image: url('../images/loading.gif');
     background-repeat: no-repeat;
     background-position: 50% 50%;
